# fuzzy-drive-search

./: .gitignore  Cargo.toml  README.md
adapters/raycast/: Cargo.toml
adapters/raycast/fuzzy-drive-search/: package-lock.json  package.json
adapters/raycast/fuzzy-drive-search/src/: init-form.tsx  search.tsx
adapters/raycast/src/: main.rs
clients/raycast/: README.md  package.json
clients/raycast/src/: auth-form.tsx  background-sync.tsx  database.ts  init-form.tsx  search.tsx  sync-form.tsx
clients/raycast/src/hooks/: useConfig.ts  useInitialization.ts  useSearch.ts  useSync.ts
core/: Cargo.toml
core/src/: lib.rs  main.rs
core/src/application/: mod.rs  search_service.rs  search_service_old.rs  use_cases.rs
core/src/domain/: entities.rs  mod.rs  traits.rs
core/src/infra/: auth.rs  config.rs  mod.rs  storage.rs
core/src/infrastructure/: config.rs  database.rs  drive_client.rs  fuzzy_search.rs  json_storage.rs  mod.rs
core/src/models/: mod.rs
core/src/services/: fuzzy.rs  mod.rs  search.rs
scripts/: setup.sh
