[package]
name = "fuzzy-drive-search-core"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "fuzzy-drive-search"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
dirs = "5.0"
toml = "0.8"
base64 = "0.22"
open = "5.0"
