[package]
name = "fuzzy-drive-search-raycast"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "fuzzy-drive-search"
path = "src/main.rs"

[dependencies]
fuzzy-drive-search-core = { path = "../../core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true